Use string replacement instead